--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,8 @@
     1.1
   ); /* Aumenta el tamaño al pasar el ratón sobre la imagen */
 }
+
+.team-info-logo {
+  width: 250px;
+  height: 250px;
+}
